Fix detecting Java <= 8 vs. >= 9 to not detect Java 8 for version-string "11.x" Add system property to junit to disable optimization in jaxb which causes illegal access in Java 9+ Add argument to junit to display all illegal accesses in Java 9+
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1854629 13f79535-47bb-0310-9956-ffa450edef68